@@ -1,3 +1,10 @@
+2008-02-09  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* src/smonitor_dev.C:
+	* src/valueparser.C:
+	- commented out some debugging messages.
+	- fixed a bun in the parameter name comparison.
+
 2008-02-07  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* src/ascii_dev.h:
